<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.okocraft.armorstandeditor</groupId>
    <artifactId>armorstandeditor</artifactId>
    <version>1.5.0-SNAPSHOT</version>

    <name>ArmorStandEditor</name>
    <url>https://github.com/okocraft/ArmorStandEditor</url>

    <licenses>
        <license>
            <name>GNU General Public License, Version 3.0</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/okocraft/ArmorStandEditor.git</connection>
        <developerConnection>scm:git@github.com:okocraft/ArmorStandEditor.git</developerConnection>
        <url>https://github.com/okocraft/ArmorStandEditor</url>
    </scm>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/okocraft/ArmorStandEditor/issues</url>
    </issueManagement>

    <ciManagement>
        <system>GitHub Actions</system>
        <url>https://github.com/okocraft/ArmorStandEditor/runs</url>
    </ciManagement>

    <properties>
        <project.charset>UTF-8</project.charset>
        <java.version>21</java.version>
        <project.build.sourceEncoding>${project.charset}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${project.charset}</project.reporting.outputEncoding>
    </properties>

    <repositories>
        <repository>
            <id>paper-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.20.6-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.siroshun09.configapi</groupId>
            <artifactId>configapi-yaml</artifactId>
            <version>4.6.4</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.siroshun09.translationloader</groupId>
            <artifactId>translationloader</artifactId>
            <version>2.0.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.1.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <defaultGoal>clean package</defaultGoal>

        <finalName>${project.name}-${project.version}</finalName>

        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>src/main/resources/</directory>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.charset}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/MANIFEST.MF</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <manifestEntries>
                                <paperweight-mappings-namespace>mojang</paperweight-mappings-namespace>
                            </manifestEntries>
                        </transformer>
                    </transformers>
                    <minimizeJar>true</minimizeJar>
                    <relocations>
                        <relocation>
                            <pattern>com.github.siroshun09.configapi.common</pattern>
                            <shadedPattern>com.github.siroshun09.configapi.api</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.github.siroshun09</pattern>
                            <shadedPattern>${project.groupId}.lib</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
